--- a/res/layout/widget.xml
+++ b/res/layout/widget.xml
@@ -6,14 +6,40 @@
     android:background="@android:color/transparent"
     android:orientation="vertical" >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/background_dark"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_launcher" />
+
+        <ImageView
+            android:id="@+id/widget_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/refresh"
+            android:src="@drawable/ic_refresh"
+            android:paddingRight="8dp" />
+    </RelativeLayout>
+
     <ListView
         android:id="@+id/widget_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
+        android:clickable="false"
         android:divider="@android:color/transparent"
         android:dividerHeight="2dp"
         android:gravity="center"
-        android:clickable="false"
         tools:targetApi="11" />
-</LinearLayout>
+
+</LinearLayout>
